add External python File

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,6 @@
     <script defer src="https://pyscript.net/alpha/pyscript.js"></script>
   </head>
   <body>
-    <h1>Welcome To PyScript</h1>
-    <py-script> print('Hello To PyScript!') </py-script>|
+    <py-script src="./index.py"></py-script>|
   </body>
 </html>
